# COS_GS

./: aclgs_test_inline.ovpn  command.sql  ftp_auto_mirror.sh  make_ovpn_clean.sh  meta_data.sql  read.txt  test.json  test.py
back/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Readme.txt  cmake_install.cmake  imgui.ini  makelog.txt
back/amp/: ampcontrol.cpp  ampoff.cpp
back/cmake/: FindMySQL.cmake
back/include/sgs/: global.h  include.h
back/include/sgs/ui/: cmdwindow.h  consolewindow.h  ftpwindow.h  propagatorwindow.h  rendering.h  rotatorwindow.h  setupinfowindow.h  tleinfowindow.h  tlmwindow.h  trxparamwindow.h  trxwindow.h
back/lib/gscsp/: CHANGELOG.rst  README.md  manifest.json  wscript
back/lib/gscsp/src/: main.c
back/lib/sgp4/: Makefile  cmake_install.cmake  compile_commands.json
back/lib/sgp4/libsgp4/: Makefile  cmake_install.cmake
back/lib/sgp4/passpredict/: Makefile  cmake_install.cmake  passpredict
back/lib/sgp4/runtest/: Makefile  cmake_install.cmake  runtest
back/lib/sgp4/sattrack/: Makefile  cmake_install.cmake  sattrack
back/script/: build_csp.sh  build_sgp4.sh  compile.sh
back/sgs/: CMakeLists.txt  Makefile  ServerSGS  cmake_install.cmake  main.cpp
back/sgs/data/beacon/: Beacon--2025-09-05-16-57-58.txt  Beacon--2025-09-10-14-15-12.txt  Beacon--2025-09-10-14-15-32.txt  Beacon--2025-09-10-14-18-12.txt  Beacon--2025-09-10-14-18-33.txt  Beacon--2025-09-10-14-18-52.txt  Beacon--2025-09-10-14-19-33.txt  Beacon--2025-09-10-14-19-53.txt  Beacon--2025-09-10-14-20-12.txt  Beacon--2025-09-10-14-20-33.txt  Beacon--2025-09-10-14-22-33.txt  Beacon--2025-09-10-14-22-53.txt  Beacon--2025-09-10-14-34-33.txt  Beacon--2025-09-10-14-35-33.txt  Beacon--2025-09-10-14-36-33.txt  Beacon--2025-09-10-14-37-13.txt  Beacon--2025-09-10-14-37-53.txt  Beacon--2025-09-10-14-39-17.txt  Beacon--2025-09-10-14-40-33.txt  Beacon--2025-09-10-14-41-33.txt  Beacon--2025-10-26-22-33-22.txt  Beacon--2025-10-26-22-33-23.txt  Beacon--2025-10-26-22-33-24.txt  Beacon--2025-10-26-22-33-25.txt  Beacon--2025-10-26-22-33-26.txt  Beacon--2025-10-26-22-33-27.txt  Beacon--2025-10-26-22-33-28.txt  Beacon--2025-10-26-22-33-29.txt  Beacon--2025-10-26-22-33-30.txt  Beacon--2025-10-26-22-33-32.txt  Beacon--2025-10-26-22-33-34.txt  Beacon--2025-10-26-22-34-07.txt  Beacon--2025-10-26-22-34-08.txt  Beacon--2025-10-26-22-34-09.txt  Beacon--2025-10-26-22-34-11.txt  Beacon--2025-10-26-22-34-12.txt  Beacon--2025-10-26-22-34-13.txt  Beacon--2025-10-26-22-34-14.txt  Beacon--2025-10-26-22-34-15.txt  Beacon--2025-10-26-22-34-17.txt  (+93 more)
back/sgs/data/raw/: Telemetry--2025-09-05-13-24-12.txt  Telemetry--2025-09-05-13-25-13.txt  Telemetry--2025-09-05-13-28-25.txt  Telemetry--2025-09-05-15-43-17.txt  Telemetry--2025-09-05-16-57-10.txt  Telemetry--2025-09-05-16-57-58.txt  Telemetry--2025-09-05-20-47-12.txt  Telemetry--2025-09-10-14-15-12.txt  Telemetry--2025-09-10-14-15-53.txt  Telemetry--2025-09-10-14-16-12.txt  Telemetry--2025-09-10-14-16-53.txt  Telemetry--2025-09-10-14-17-33.txt  Telemetry--2025-09-10-14-18-12.txt  Telemetry--2025-09-10-14-18-33.txt  Telemetry--2025-09-10-14-18-52.txt  Telemetry--2025-09-10-14-19-53.txt  Telemetry--2025-09-10-14-20-53.txt  Telemetry--2025-09-10-14-21-12.txt  Telemetry--2025-09-10-14-21-53.txt  Telemetry--2025-09-10-14-22-12.txt  Telemetry--2025-09-10-14-22-33.txt  Telemetry--2025-09-10-14-22-53.txt  Telemetry--2025-09-10-14-23-13.txt  Telemetry--2025-09-10-14-34-13.txt  Telemetry--2025-09-10-14-35-53.txt  Telemetry--2025-09-10-14-36-13.txt  Telemetry--2025-09-10-14-36-33.txt  Telemetry--2025-09-10-14-36-53.txt  Telemetry--2025-09-10-14-38-13.txt  Telemetry--2025-09-10-14-38-57.txt  Telemetry--2025-09-10-14-39-33.txt  Telemetry--2025-09-10-14-41-07.txt  Telemetry--2025-09-10-14-41-33.txt  Telemetry--2025-09-10-15-40-04.txt  Telemetry--2025-09-10-15-44-51.txt  Telemetry--2025-09-10-15-56-54.txt  Telemetry--2025-09-10-16-22-15.txt  Telemetry--2025-09-10-17-01-53.txt  Telemetry--2025-09-10-17-04-38.txt  Telemetry--2025-09-10-17-09-56.txt  (+149 more)
back/sgs/data/report/: Report--2025-09-10-16-22-15.txt  Report--2025-09-10-16-22-19.txt  Report--2025-10-26-21-15-30.txt  Report--2025-10-26-21-18-49.txt  Report--2025-10-26-21-19-03.txt  Report--2025-10-26-21-29-41.txt  Report--2025-10-26-21-29-55.txt  Report--2025-10-26-21-31-47.txt  Report--2025-10-26-21-31-56.txt  Report--2025-10-26-21-32-10.txt  Report--2025-10-26-21-36-22.txt  Report--2025-10-26-21-36-36.txt  Report--2025-10-26-21-38-59.txt  Report--2025-10-26-21-39-13.txt  Report--2025-10-26-21-43-07.txt  Report--2025-10-26-21-43-21.txt  Report--2025-10-26-22-33-05.txt  Report--2025-10-26-22-33-22.txt  Report--2025-10-26-22-33-26.txt  Report--2025-10-26-22-33-30.txt  Report--2025-10-26-22-33-40.txt  Report--2025-10-26-22-33-50.txt  Report--2025-10-26-22-34-07.txt  Report--2025-10-26-22-34-12.txt  Report--2025-10-26-22-34-15.txt  Report--2025-10-26-22-34-25.txt  Report--2025-10-26-22-34-30.txt  (+49 more)
back/sgs/dcs/: CMakeLists.txt  Makefile  cmake_install.cmake
back/sgs/gts/: CMakeLists.txt  Makefile  cmake_install.cmake
back/sgs/ifc/: CMakeLists.txt  Makefile  cmake_install.cmake
back/sgs/ncs/: flowcontrol.cpp  flowcontrol.h
back/sgs/ros/: CMakeLists.txt
back/sgs/tools/: beacon_client.cpp  telemetry_client.cpp
back/sgs/utl/: CMakeLists.txt  Makefile  cmake_install.cmake
back/src/: global.cpp  main.cpp  miman_util.cpp  miman_util.h
back/src/backend/: gstrx.cpp  radial.cpp  rotator.cpp  satelliteobject.cpp
back/src/baseline/: flowcontrol.cpp  io_ip.cpp  io_shell.cpp  rs232.cpp
back/src/frontend/: autopilot.cpp  beacon.cpp  fswcmd.cpp  ftpfcd.cpp  ftprdp.cpp  model.cpp  ping.cpp  rendering.cpp  syscmd.cpp  tle.cpp
back/src/ui/: cmdwindow.cpp  console.cpp  ftpwindow.cpp  propagator.cpp  rotcont.cpp  setupinfo.cpp  tleinfo.cpp  tlm.cpp  trx.cpp  trxparam.cpp
back/testcode/: CMakeLists.txt  Makefile  TestEnvExe  cmake_install.cmake  gettablelist.cpp  tblspec.txt
tc/: CMakeCache.txt  CMakeLists.txt  Makefile  client  client.cpp  cmake_install.cmake  server  server.cpp  tcp_tc.cpp
tc/inc/: tcp_tc.h
(+1474 files in other folders)
