CMAKE_MINIMUM_REQUIRED( VERSION 3.0.0 )
CMAKE_POLICY(SET CMP0072 OLD)

PROJECT(MIMAN)

SET(CMAKE_VERBOSE_MAKEFILE TRUE)
# SET( CMAKE_C_FLAGS_DEBUG "-DDEBUG -DC_FLAGS" )
# SET( CMAKE_EE_LINKER_FLAGS_DEBUG "-DDEBUG -DLINKER_FLAGS" )

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ./cmake)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(OPENGL_GL_PREFERENCE LEGACY)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-address-of-packed-member -Wno-int-to-pointer-cast -Wno-pointer-arith")
SET(CMAKE_VERBOSE_MAKEFILE OFF)
# add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
# add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")

INCLUDE_DIRECTORIES (/usr/local/include)
INCLUDE_DIRECTORIES (/usr/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/config)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/sgp4)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/imgui)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/build)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libparam_client/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libutil/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libgscsp/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libgscsp/lib/libcsp/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libgscsp/lib/libcsp/src)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/build/lib/libgscsp/lib/libcsp/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libfp_client/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libftp_client/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/lib/libgosh_client/include)

FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES( ${THREADS_INCLUDE_DIRS} )

FIND_PACKAGE(CURL REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})

FIND_PACKAGE(glfw3 REQUIRED)
INCLUDE_DIRECTORIES( ${glfw3_INCLUDE_DIRS} )

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES( ${OpenGL_INCLUDE_DIRS} )

FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_DIRS} )

FIND_PACKAGE(glbinding REQUIRED)
INCLUDE_DIRECTORIES( ${glbinding_INCLUDE_DIRS} )

FIND_PACKAGE(MySQL REQUIRED)
INCLUDE_DIRECTORIES( ${MySQL_INCLUDE_DIRS} )

FIND_PACKAGE(Vulkan REQUIRED)
include_directories( ${Vulkan_INCLUDE_DIRS} )

file(GLOB_RECURSE MIMAN_SRC 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/backend/*.cpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/frontend/*.cpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ui/*.cpp"
)

ADD_EXECUTABLE(MIMAN ${MIMAN_SRC})
TARGET_LINK_LIBRARIES(MIMAN
    ${CURL_LIBRARIES}
    Threads::Threads
    ${OpenGL_LIBRARIES}
    ${GLEW_LIBRARIES}
    ${glbinding_LIBRARIES}
    ${MYSQL_LIBRARIES}
    glfw
    Vulkan::Vulkan
)

TARGET_LINK_LIBRARIES(MIMAN ${CMAKE_CURRENT_SOURCE_DIR}/lib/sgp4/libsgp4.a)
TARGET_LINK_LIBRARIES(MIMAN ${CMAKE_CURRENT_SOURCE_DIR}/lib/imgui/libimgui.a)
TARGET_LINK_LIBRARIES(MIMAN ${CMAKE_CURRENT_SOURCE_DIR}/lib/gscsp/build/libmimancsp.a)

TARGET_COMPILE_OPTIONS(MIMAN PRIVATE -Wall -g)
